Bug 92217 - UI Grey text background in read-only document infobar
Summary: UI Grey text background in read-only document infobar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Jan Holesovsky
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: bibisected, regression
: 94452 95187 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-20 20:58 UTC by Katarina Behrens (Inactive)
Modified: 2016-10-25 19:21 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot demonstrating the issue (47.16 KB, image/png)
2015-06-20 20:58 UTC, Katarina Behrens (Inactive)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens (Inactive) 2015-06-20 20:58:02 UTC
Created attachment 116687 [details]
Screenshot demonstrating the issue

1. Open any read-only document
2. A yellow infobar ("This document is read-only ...") appears over the top edge of the document 

=> but it ain't completely yellow, the text in it has unwanted grey background, as you can see on the attached screenshot

Reproduced both in KDE and GNOME
Comment 1 Buovjaga 2015-06-21 15:51:34 UTC
Confirmed.

attachment 73721 [details] can be used for testing.

4.4 is ok.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 3ecef8cedb215e49237a11607197edc91639bfcd
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-19_23:16:58
Locale: fi-FI (fi_FI)

Ubuntu 15.04 64-bit 
Version: 4.4.2.2
Build ID: 40m0(Build:2)
Locale: en_US

Ubuntu 15.04 64-bit 
Version: 5.1.0.0.alpha1+
Build ID: 3ecef8cedb215e49237a11607197edc91639bfcd
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-06-20_00:06:19
Locale: en-US (en_US.UTF-8)
Comment 2 Matthew Francis 2015-08-12 10:16:15 UTC
Bibisecting with the master dbgutil repo points to the source range
 9db629b8a1fa9b63bc320f8d47594ec82511a9c5~1..891304bb0ad3af9d8d73f947f25477abf57485a4

There's a set of rendercontext commits in there which look plausible
Comment 3 Buovjaga 2015-09-27 15:06:10 UTC
*** Bug 94452 has been marked as a duplicate of this bug. ***
Comment 4 Samuel Mehrbrodt 2015-10-12 13:28:20 UTC
Kendy, could this be related to your rendercontext changes?
Comment 5 Commit Notification 2015-10-12 16:37:27 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38dc5ea989d78b1f854562ea73a4fc0a604b15ac

tdf#92217: The infobar text should have a transparent background...

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Samuel Mehrbrodt 2015-10-13 10:34:44 UTC
Thanks a lot, Kendy!
Proposed for 5-0 branch: https://gerrit.libreoffice.org/#/c/19347/
Comment 7 Commit Notification 2015-10-13 11:49:16 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=73b38e45d1c81ee533f8c6a800079486e57e4fcd&h=libreoffice-5-0

tdf#92217: The infobar text should have a transparent background...

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Maxim Monastirsky 2015-10-19 20:53:56 UTC
*** Bug 95187 has been marked as a duplicate of this bug. ***
Comment 9 Robinson Tryon (qubit) 2015-12-17 09:14:19 UTC Comment hidden (obsolete)