tdf#92217: The infobar text should have a transparent background...

...instead of setting background at various places.

Change-Id: Idfa6a36bcb2aefbb33a7647725098f4eea0f93c4
Reviewed-on: https://gerrit.libreoffice.org/19347
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>